Base container, row and cols

--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6 vh-100 bg-primary-subtle">
+                <h2>Log in!</h2>
+            </div>
+            <div class="col-12 col-md-6 vh-100 bg-success-subtle">
+                <h2>Sign up!</h2>
+            </div>
+        </div>
+    </div>
 
 
 
