--- a/index.html
+++ b/index.html
@@ -16,9 +16,31 @@
         <div class="row">
             <div class="col-12 col-md-6 vh-100 bg-primary-subtle">
                 <h2>Log in!</h2>
+                <span>or</span>
+                <a href="#">Please register!</a>
+                <h3>Login with e-mail and password</h3>
+                <!-- e-mail comp -->
+                <!-- password comp -->
+                <!-- loginButton comp -->
+                <span>If you don't remember your password:</span>
+                <a href="#">Forgotten password!</a>
+                <span>or</span>
+                <h3>Login with a profile</h3>
+                <!-- FB button -->
+                <!-- Google button -->
+                <!-- GitHub button -->
+
+
+
             </div>
             <div class="col-12 col-md-6 vh-100 bg-success-subtle">
                 <h2>Sign up!</h2>
+                <h3>Registration form</h3>
+                <!-- username text comp -->
+                <!-- e-mail comp -->
+                <!-- password comp -->
+                <!-- password comp -->
+                <!-- registrationButton comp -->
             </div>
         </div>
     </div>
