Styling the Login part.

--- a/index.html
+++ b/index.html
@@ -13,69 +13,76 @@
 
 <body>
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 col-md-6 vh-100 bg-primary-subtle">
+        <div class="row text-center">
+            <div class="col-12 col-md-6 vh-100 bg-primary-subtle py-5">
                 <h2>Log in!</h2>
                 <span>or</span>
                 <a href="#">Please register!</a>
-                <h3>Login with e-mail and password</h3>
 
-                <!-- e-mail comp -->
-                <div class="input-group mb-3">
-                    <span class="input-group-text" id="email-add1">E-mail:</span>
-                    <input type="email" id="logEmail" class="form-control" placeholder="e-mail address..."
-                        aria-label="Email" aria-describedby="email-add1">
-                </div>
+                <form class="" style="max-width: 360px; margin: 0 auto;">
+                    <hr>
+                    <h3>Login with e-mail and password</h3>
+                    <!-- e-mail comp -->
+                    <div class="input-group mb-3">
+                        <span class="input-group-text w-25" id="email-add1">E-mail:</span>
+                        <input type="email" id="logEmail" class="form-control" placeholder="e-mail address..."
+                            aria-label="Email" aria-describedby="email-add1">
+                    </div>
 
-                <!-- password comp -->
-                <div class="input-group mb-3">
-                    <span class="input-group-text" id="password-enter1">Password:</span>
-                    <input type="password" id="logPassword" class="form-control" placeholder="password..."
-                        aria-label="Password" aria-describedby="password-enter1">
-                </div>
+                    <!-- password comp -->
+                    <div class="input-group mb-3">
+                        <span class="input-group-text w-25" id="password-enter1">Password:</span>
+                        <input type="password" id="logPassword" class="form-control" placeholder="password..."
+                            aria-label="Password" aria-describedby="password-enter1">
+                    </div>
 
-                <!-- loginButton comp -->
-                <button type="button" id="LogBtn" class="btn btn-primary">Login with email and password</button>
+                    <!-- loginButton comp -->
+                    <button type="button" id="LogBtn" class="btn btn-primary btn-sm">Login with email and
+                        password</button>
 
-                <span>If you don't remember your password:</span>
-                <a href="#">Forgotten password!</a>
-                <span>or</span>
-                <h3>Login with a profile</h3>
-                <div style="max-width: 220px;">
-                    <!-- FB button -->
-                    <button type="button" id="FbBtn" class="btn btn-primary btn-sm text-start p-0 mb-2"
-                        style="width: 200px;">
-                        <img src="./assets/pics/Facebook-logo-w30-circle.png" alt="facebook logo">
-                        <span class="d-inline-block text-center" style="width: calc(100% - 35px);">
-                            Sign in with Facebook
-                        </span>
-                    </button>
-                    <!-- Google button -->
-                    <button type="button" id="GooBtn" class="btn btn-primary btn-sm text-start p-0 mb-2"
-                        style="width: 200px;">
-                        <div class="d-inline-block">
-                            <img src="./assets/pics/Google__G__Logo_wb_h30.png" alt="facebook logo">
-                        </div>
-                        <span class="d-inline-block text-center" style="width: calc(100% - 35px);">
-                            Sign in with Google
-                        </span>
-                    </button>
-                    <!-- GitHub button -->
-                    <button type="button" id="GitBtn" class="btn btn-dark btn-sm text-start p-0 mb-2"
-                        style="width: 200px;">
-                        <div class="d-inline-block">
-                            <img src="./assets/pics/github-mark-white_h30.png" alt="facebook logo">
-                        </div>
-                        <span class="d-inline-block text-center" style="width: calc(100% - 35px);">
-                            Sign in with GitHub
-                        </span>
-                    </button>
-                </div>
+                    <div>
+                        <span>If you don't remember your password:</span>
+                    </div>
+                    <a href="#">Forgotten password!</a>
 
+                    <hr>
+                    <span>or</span>
+                    <h3>Login with a profile:</h3>
+                    <div class="d-inline-block" style="max-width: 220px;">
+                        <!-- FB button -->
+                        <button type="button" id="FbBtn" class="btn btn-primary btn-sm text-start p-0 mb-2"
+                            style="width: 220px;">
+                            <img src="./assets/pics/Facebook-logo-w30-circle.png" alt="facebook logo">
+                            <span class="d-inline-block text-center" style="width: calc(100% - 35px);">
+                                Sign in with Facebook
+                            </span>
+                        </button>
+                        <!-- Google button -->
+                        <button type="button" id="GooBtn" class="btn btn-primary btn-sm text-start p-0 mb-2"
+                            style="width: 220px;">
+                            <div class="d-inline-block">
+                                <img src="./assets/pics/Google__G__Logo_wb_h30.png" alt="facebook logo">
+                            </div>
+                            <span class="d-inline-block text-center" style="width: calc(100% - 35px);">
+                                Sign in with Google
+                            </span>
+                        </button>
+                        <!-- GitHub button -->
+                        <button type="button" id="GitBtn" class="btn btn-dark btn-sm text-start p-0 mb-2"
+                            style="width: 220px;">
+                            <div class="d-inline-block">
+                                <img src="./assets/pics/github-mark-white_h30.png" alt="facebook logo">
+                            </div>
+                            <span class="d-inline-block text-center" style="width: calc(100% - 35px);">
+                                Sign in with GitHub
+                            </span>
+                        </button>
+                    </div>
+                </form>
 
 
             </div>
-            <div class="col-12 col-md-6 vh-100 bg-success-subtle">
+            <div class="col-12 col-md-6 vh-100 bg-success-subtle py-4">
                 <h2>Sign up!</h2>
                 <h3>Registration form</h3>
 
