Add autofocus and link the 'Please register' to regUName

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="col-12 col-md-6 vh-100 bg-primary-subtle py-5 overflow-auto">
                 <h2>Log in!</h2>
                 <span>or</span>
-                <a href="#">Please register!</a>
+                <a href="#regUName">Please register!</a>
 
                 <form class="mx-auto" style="max-width: 360px;">
                     <hr>
@@ -26,7 +26,7 @@
                     <div class="input-group input-group-sm mb-3">
                         <span class="input-group-text px-2 w-25" id="email-add1">E-mail:</span>
                         <input type="email" id="logEmail" class="form-control" placeholder="e-mail address..."
-                            aria-label="Email" aria-describedby="email-add1">
+                           autofocus aria-label="Email" aria-describedby="email-add1">
                     </div>
 
                     <!-- password comp -->
