Create an object and add registration form properties

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <!-- username text comp -->
                     <div class="input-group input-group-sm mb-3">
                         <span class="input-group-text px-2 w-25" id="username-add1">User name*:</span>
-                        <input type="text" id="regUName" class="form-control" placeholder="e-mail address..."
+                        <input type="text" id="regUName" class="form-control" placeholder="user name..."
                             aria-label="User name" aria-describedby="username-add1">
                     </div>
 
