Create setValue function and modify checkField function to return the field value or nothing

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <input type="text" id="regUName" class="form-control" placeholder="user name..."
                             aria-label="User name" aria-describedby="username-add1">
                         <div class="invalid-feedback">
-                            "Incorrect username! The username must be at least 3 characters long!"
+                            "Mandatory field! The username must be at least 3 characters long!"
                         </div>
                     </div>
 
