--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
     <div class="container-fluid">
         <div class="row text-center">
+                            
             <div class="col-12 col-md-6 vh-100 bg-primary-subtle py-5 overflow-auto">
+                <div id="welcomeText" class="d-none"></div>
                 <h2>Log in!</h2>
                 <span>or</span>
                 <a href="#regUName">Please register!</a>
@@ -82,7 +84,7 @@
 
 
             </div>
-            <div class="col-12 col-md-6 vh-100 bg-success-subtle py-5 overflow-auto">
+            <div class="col-12 col-md-6 vh-100 bg-success-subtle py-5 overflow-auto">                
                 <h2>Sign up!</h2>
                 <form class="mx-auto" style="max-width: 360px;">
                     <hr>
