--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Gabor Halasz">
     <title>LoginPage</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    
 </head>
 
 <body>
@@ -16,7 +17,7 @@
 
         <div class="row text-center">
             <div id="welcomePlace" class="d-none"></div>
-            <div id="signinup" class="col-12 col-md-6 vh-100 bg-primary-subtle py-5 overflow-auto">
+            <div id="signinup" class="col-12 col-md-6 vh-100 bg-primary-subtle pt-5 overflow-auto">
 
                 <h2>Log in!</h2>
                 <span>or</span>
@@ -24,11 +25,11 @@
 
                 <form class="mx-auto" style="max-width: 360px;">
                     <hr>
-                    <h3>Login with e-mail and password</h3>
+                    <h3 class="mb-4">Login with e-mail and password</h3>
                     <!-- e-mail comp -->
                     <div class="input-group input-group-sm mb-3">
                         <span class="input-group-text px-2 w-25" id="email-add1">E-mail:</span>
-                        <input type="email" id="logEmail" class="form-control" placeholder="e-mail address..." autofocus
+                        <input type="email" id="logEmail" class="form-control" placeholder="e-mail address..."
                             aria-label="Email" aria-describedby="email-add1">
                     </div>
 
@@ -37,10 +38,13 @@
                         <span class="input-group-text px-2 w-25" id="password-enter1">Password:</span>
                         <input type="password" id="logPassword" class="form-control" placeholder="password..."
                             aria-label="Password" aria-describedby="password-enter1">
+                        <div id="logWarn" class="w-100 invisible text-danger lh-1" style="height: 2.1rem;">
+                            "Password or email is missing or incorrect!"
+                        </div>
                     </div>
 
                     <!-- loginButton comp -->
-                    <button type="button" id="LogBtn" class="btn btn-primary btn-sm">Login with email and
+                    <button type="button" id="LogBtn" class="btn btn-primary btn-sm mb-3">Login with email and
                         password</button>
 
                     <div>
@@ -53,15 +57,18 @@
                     <h3 class="mb-4">Login with a profile:</h3>
                     <div class="d-inline-block" style="max-width: 220px;">
                         <!-- FB button -->
-                        <button type="button" id="FbBtn" class="btn btn-primary btn-sm rounded-circle text-start p-1 mx-3 mb-3">
+                        <button type="button" id="FbBtn"
+                            class="btn btn-primary btn-sm rounded-circle text-start p-1 mx-3 mb-3">
                             <img src="./assets/pics/Facebook-logo-w30-circle.png" alt="facebook logo">
                         </button>
                         <!-- Google button -->
-                        <button type="button" id="GooBtn" class="btn btn-primary btn-sm rounded-circle text-start p-1 mx-3 mb-3">
+                        <button type="button" id="GooBtn"
+                            class="btn btn-primary btn-sm rounded-circle text-start p-1 mx-3 mb-3">
                             <img src="./assets/pics/Google__G__Logo_wb_h30.png" alt="facebook logo">
                         </button>
                         <!-- GitHub button -->
-                        <button type="button" id="GitBtn" class="btn btn-dark btn-sm rounded-circle text-start p-1 mx-3 mb-3">
+                        <button type="button" id="GitBtn"
+                            class="btn btn-dark btn-sm rounded-circle text-start p-1 mx-3 mb-3">
                             <img src="./assets/pics/github-mark-white_h30.png" alt="facebook logo">
                         </button>
                     </div>
