Refactor project file structure
- Create src map and move project files and maps into it
- Move JavaScript modules into a dedicated 'modules' directory
- Adjust relative paths and resource references to match new structure

--- a/src/index.html
+++ b/src/index.html
@@ -59,17 +59,17 @@
                         <!-- FB button -->
                         <button type="button" id="FbBtn"
                             class="btn btn-primary btn-sm rounded-circle text-start p-1 mx-3 mb-3">
-                            <img src="./assets/pics/Facebook-logo-w30-circle.png" alt="facebook logo">
+                            <img src="./assets/pics/Facebook-logo-w30-circle.png" alt="Facebook logo">
                         </button>
                         <!-- Google button -->
                         <button type="button" id="GooBtn"
                             class="btn btn-primary btn-sm rounded-circle text-start p-1 mx-3 mb-3">
-                            <img src="./assets/pics/Google__G__Logo_wb_h30.png" alt="facebook logo">
+                            <img src="./assets/pics/Google__G__Logo_wb_h30.png" alt="Google logo">
                         </button>
                         <!-- GitHub button -->
                         <button type="button" id="GitBtn"
                             class="btn btn-dark btn-sm rounded-circle text-start p-1 mx-3 mb-3">
-                            <img src="./assets/pics/github-mark-white_h30.png" alt="facebook logo">
+                            <img src="./assets/pics/github-mark-white_h30.png" alt="GitHub logo">
                         </button>
                     </div>
                 </form>
